--- a/public/views/layouts/main.handlebars
+++ b/public/views/layouts/main.handlebars
@@ -31,7 +31,7 @@
                 <div class="col-9 input-group-lg">
                     <input type="text" class="form-control inputN" placeholder="Enter N..." name="inputN">
                     
-                    <span id="inputN_err" class="errMsgSpan float-left" style="display: none;">*Enter integer val</span>
+                    <span id="inputN_err" class="errMsgSpan float-left" style="display: none;">*Enter integer value</span>
                 </div>
                 <div class="col-3">
                     <button type="submit" class="btn btn-primary btn-lg submitBtn" disabled="disabled">Hit Me!</button>
